fixed signup button z-index

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -115,6 +115,13 @@ $navbar-background-color: #D0DCFB;
   }
 }
 
+.sign-up-button {
+  position: absolute;
+  z-index: 20;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .modality--mobile {
   height: 5rem;
   padding: 1rem;
